Finished 5G intro / definition sections

--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@ This will be the abstract - short passage, intro, basic ideas, what review will 
 \section{Introduction}
 In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology \textit{(1G)} in the 1980s, right up to the fourth generation \textit{(4G)} available in most countries around the world today, we have seen exponential improvement in services.
 
-Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 20 billion devices connected to the internet in 2017 \cite{ihsmarkit} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
+Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 18 billion devices connected to the internet in 2017 \cite{ericssondev} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
 
 In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation \textit{(5G)} of standards, and the possible applications of 5G.
 
@@ -36,19 +36,21 @@ As the World Wide Web became more accessible to the average person in the mid-la
 \subsection{Fourth Generation and Current Limitations} \label{subsec:4g}
 As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, the creation of a fourth generation \textit{(4G)} of standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
 
-According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100Mbps (\textit{megabits-per-second}). While these speeds on paper are attractive, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses this small band in the spectrum. Estimates of total number of connected devices (including landlines, mobile phones, televisions and kettles to name a few) are currently at 17-18 billion \cite{ericssondev}, with this number increasing rapidly. This growing number implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
+According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100Mbps (\textit{megabits-per-second}). While these speeds on paper are attractive, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses this small band in the spectrum. Estimates of total number of connected devices (including landlines, mobile phones, televisions and kettles to name a few) are currently at 18 billion \cite{ericssondev}, with this number increasing rapidly. This growing number implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
 
 \section{Fifth Generation}
 While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies. 5G will bring more efficient communication methods, thus allowing for faster movement of data coupled with increased reliability.
 
-\subsection{What is 5G?}
-The standards for 5G are continuously being reviewed, but the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have set out three core features of 5G \cite{ieee5g}, outlined below. 
+\subsection{The Definition of 5G}
+Presently there is no fixed definition for 5G, and the standards for 5G are continuously being reviewed. However, the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have defined three core features of 5G \cite{ieee5g}, outlined below. 
 
-\textit{1) Massive Connectivity}. The \textit{Internet of Things} is defined as the point in time where the number physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
+\textbf{1) Massive Connectivity}. The \textit{Internet of Things} era is defined as the point in time where the number physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
 
-\textit{2) Capacity Enhancement}. As mentioned in \ref{subsec:4g}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 17-18 billion in 2017, to 29 billion by 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+\textbf{2) Capacity Enhancement}. As mentioned in \ref{subsec:4g}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 \textit{Ericsson} predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
 
-\textit{3) Ultra High Reliability and Low Latency}
+\textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices, regardless of how infrequent it may be. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant communication and data transfer is highly desired, if not necessary.
+
+With three fundamental motivations for 5G in mind, we must then contemplate the technologies required to achieve such goals. Like 5G standards, the technologies for 5G networks have also not been completely decided on. However, 5 popular technologies have emerged; Millimetre waves, small cells, massive MIMO (Multiple In Multiple Out), Beamforming and Full Duplex.
 
 \subsection{Millimetre Waves}
 \subsection{Small Cells}
