Working on mmwaves, will probably restructure

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -65,3 +65,32 @@ of Next Generation Communication Network",
     title     = "Standards - 5G",
     url       = "https://5g.ieee.org/standards",
 }
+
+@article{mmwave,
+% times cited: 320~
+% Amitava Ghosh et al
+    author =       "A. Ghosh et al",
+    title =        "Millimeter-Wave Enhanced Local Area Systems: A High-Data-Rate Approach for
+Future Wireless Networks",
+    journal =      "IEEE Journal on Selected Areas in Communications",
+    volume =       "32",
+    number =       "6",
+    pages =        "1152-1163",
+    year =         "2014",
+    DOI =          "10.1109/JSAC.2014.2328111"
+}
+
+@misc{28ghz,
+% times cited: 40~
+% Sijia Deng et al
+% Conference
+    author =       "s. Deng et al",
+    title =        "28 GHz and 73 GHz Millimeter-Wave Indoor Propagation Measurements and Path Loss Models",
+    journal =      "2015 IEEE International Conference on Communication Workshop (ICCW)",
+    volume =       "32",
+    number =       "6",
+    pages =        "1152-1163",
+    year =         "2015",
+    DOI =          "10.1109/ICCW.2015.7247348"
+}
+
