--- a/main.tex
+++ b/main.tex
@@ -41,19 +41,23 @@ According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer
 \section{Fifth Generation}
 While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies. 5G will bring more efficient communication methods, thus allowing for faster movement of data coupled with increased reliability.
 
-\subsection{The Definition of 5G}
+\subsection{The Definition of 5G} \label{subsec:def5g}
 Presently there is no fixed definition for 5G, and the standards for 5G are continuously being reviewed. However, the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have defined three core features of 5G \cite{ieee5g}, outlined below. 
 
 \textbf{1) Massive Connectivity}. The \textit{Internet of Things} era is defined as the point in time where the number physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
 
-\textbf{2) Capacity Enhancement}. As mentioned in \ref{subsec:4g}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 \textit{Ericsson} predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+\textbf{2) Capacity Enhancement}. As mentioned in \textit{\ref{subsec:4g}}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 \textit{Ericsson} predicted the number of connected devices to rise from 18 billion in 2017, to 29 billion in 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
 
 \textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices, regardless of how infrequent it may be. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant communication and data transfer is highly desired, if not necessary.
 
 With three fundamental motivations for 5G in mind, we must then contemplate the technologies required to achieve such goals. Like 5G standards, the technologies for 5G networks have also not been completely decided on. However, 5 popular technologies have emerged; Millimetre waves, small cells, massive MIMO (Multiple In Multiple Out), Beamforming and Full Duplex.
 
-\subsection{Millimetre Waves}
-\subsection{Small Cells}
+\subsection{Millimetre Waves and Small Cells}
+As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the key issues 5G needs to solve is an insufficient capacity for our current forecasts concerning device numbers. Our current 4G LTE networks operate on radio waves, broadcast over frequency bands below 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to this problem is to simply utilise more of the frequency spectrum. Unfortunately, this is much more complicated than plainly allowing waves to travel over a wider variety of frequencies. Through the use of millimetre waves (mmWaves), broadcast between 30 and 300GHz, a wide area of previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard 802.11ad has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands.
+
+Millimetre waves are an attractive technology from the point of view of data integrity due to their size. Compact waves travel faster than longer, less compact waves (like radio waves), and due to their small size are also less likely to be disrupted during transmission. Unfortunately, these mmWaves can be easily absorbed by atmospheric conditions such as rain or cloud, as well as natural and man-made objects such as trees and buildings.
+
+
 \subsection{Massive MIMO: Multiple Input Multiple Output}
 \subsection{Beamforming}
 \subsection{Full Duplex}
