Working on small cells...

--- a/main.tex
+++ b/main.tex
@@ -50,12 +50,25 @@ Presently there is no fixed definition for 5G, and the standards for 5G are cont
 
 \textbf{3) Ultra High Reliability and Low Latency}. Demands and expectations placed on our networks today differ greatly in comparison to those at the beginning of mobile communications, and even at the introduction of 3G and 4G networks. We find ourselves irked at the sight of no signal on our devices, regardless of how infrequent it may be. It is this aversion to down-time that makes ultra high reliability a focus point for improvement. \textit{Latency} is defined as the amount of time it takes for data to travel from one point on a network to another, with emphasis placed on speed over integrity of data. For example, low latency is ideal for voice calls or online gaming, where near instant communication and data transfer is highly desired, if not necessary.
 
-With three fundamental motivations for 5G in mind, we must then contemplate the technologies required to achieve such goals. Like 5G standards, the technologies for 5G networks have also not been completely decided on. However, 5 popular technologies have emerged; Millimetre waves, small cells, massive MIMO (Multiple In Multiple Out), Beamforming and Full Duplex.
+\section{Proposed Technologies}
 
-\subsection{Millimetre Waves and Small Cells}
-As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the key issues 5G needs to solve is an insufficient capacity for our current forecasts concerning device numbers. Our current 4G LTE networks operate on radio waves, broadcast over frequency bands below 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to this problem is to simply utilise more of the frequency spectrum. Unfortunately, this is much more complicated than plainly allowing waves to travel over a wider variety of frequencies. Through the use of millimetre waves (mmWaves), broadcast between 30 and 300GHz, a wide area of previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard 802.11ad has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands.
+With three fundamental motivations behind 5G in mind, we must then contemplate the technologies required to achieve such goals. Like 5G standards, the technologies for 5G networks have also not been completely decided on. However, some popular promising technologies have emerged and include; Millimetre waves, small cells, massive MIMO (Multiple In Multiple Out), Beamforming and Full Duplex.
 
-Millimetre waves are an attractive technology from the point of view of data integrity due to their size. Compact waves travel faster than longer, less compact waves (like radio waves), and due to their small size are also less likely to be disrupted during transmission. Unfortunately, these mmWaves can be easily absorbed by atmospheric conditions such as rain or cloud, as well as natural and man-made objects such as trees and buildings.
+\subsection{Millimetre Waves}
+As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the most pressing issues 5G needs to solve is an insufficient capacity in our networks for our current forecasts concerning device numbers. Current radio wave-based networks are utilising frequencies under 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to capacity problems is to simply utilise more of the frequency spectrum. Unfortunately, this is much more complicated than plainly allowing waves to travel over a wider variety of frequencies. 
+
+Through the use of millimetre waves (\textit{mmWaves}), broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard 802.11ad has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands. 
+
+These suggested bands would not only improve network capacity, but would also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}), with latencies of less than 1 millisecond \cite{mmwave}. Millimetre waves are an attractive technology not only from the perspective of transfer speed, but also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission. 
+
+\subsection{Small Cells}
+
+While millimetre waves sound promising with respect to both capacity and speed, they are regrettably not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost by way of blockage by natural and man-made objects such as trees and buildings, meaning they have previously been dismissed with regard to mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
+
+By incorporating stations known as small cells - smaller, more portable base stations - we could bypass the issue of signals being lost through obstacles. In one case, when small cells were placed at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly (to be edited.....)
+between 0.06 and 0.08 decibels per kilometre in 28 and 38GHz bands, and 
+
+
 
 
 \subsection{Massive MIMO: Multiple Input Multiple Output}
