--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,7 +80,21 @@ Future Wireless Networks",
     DOI =          "10.1109/JSAC.2014.2328111"
 }
 
-@misc{28ghz,
+@misc{2ghz,
+% times cited: 220~
+% Sijia Deng et al
+% Conference
+    author =       "s. Deng et al",
+    title =        "28 GHz and 73 GHz Millimeter-Wave Indoor Propagation Measurements and Path Loss Models",
+    journal =      "2015 IEEE International Conference on Communication Workshop (ICCW)",
+    volume =       "32",
+    number =       "6",
+    pages =        "1152-1163",
+    year =         "2013",
+    DOI =          "10.1109/ICC.2013.6655399"
+}
+
+@misc{28_73ghz,
 % times cited: 40~
 % Sijia Deng et al
 % Conference
