--- a/main.tex
+++ b/main.tex
@@ -57,18 +57,19 @@ With three fundamental motivations behind 5G in mind, we must then contemplate t
 \subsection{Millimetre Waves}
 As acknowledged in \textit{\ref{subsec:def5g}-2}, one of the most pressing issues 5G needs to solve is an insufficient capacity in our networks for our current forecasts concerning device numbers. Current radio wave-based networks are utilising frequencies under 6GHz, only a minuscule portion of the area of electromagnetic spectrum allocated to radio and micro-waves. A promising solution to capacity problems is to simply utilise more of the frequency spectrum. Unfortunately, this is much more complicated than plainly allowing waves to travel over a wider variety of frequencies. 
 
-Through the use of millimetre waves (\textit{mmWaves}), broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard 802.11ad has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands. 
+Through the use of millimetre waves (\textit{mmWaves}), broadcast between 30 and 300GHz, a wide area of the spectrum previously unused for communications would be made available. According to Ghosh \textit{et al} in \cite{mmwave}, bands of particular interest include those between 20 and 90 GHz, specifically the 27.5-29.5, 36-40, 71-76 and 81-86GHz bands. While the 57-64GHz band could in theory also be used, new wireless standard \textit{802.11ad} has already been developed to operate in this band. Fortunately, there is still up to 16GHz of available space in the remaining suggested bands. 
 
-These suggested bands would not only improve network capacity, but would also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}), with latencies of less than 1 millisecond \cite{mmwave}. Millimetre waves are an attractive technology not only from the perspective of transfer speed, but also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission. 
+These suggested bands would not only improve network capacity, but would also allow for transfer of data at astonishing rates compared to those of today - up to 10Gpbs (\textit{gigabits-per-second}, equivalent to 1.25 gigabytes), with latencies of less than 1 millisecond \cite{mmwave}. Millimetre waves are an attractive technology not only from the perspective of transfer speed, but also data integrity. Compact waves travel faster than longer, less compact waves (such as radio waves), and due to their small size are also less likely to be disrupted during transmission. 
 
 \subsection{Small Cells}
 
 While millimetre waves sound promising with respect to both capacity and speed, they are regrettably not ideal over long distances and can be easily absorbed by atmospheric conditions such as rain or cloud. Signal can also be lost by way of blockage by natural and man-made objects such as trees and buildings, meaning they have previously been dismissed with regard to mobile communications. The solution to this problem lies in increasing the density or closeness of our networks. 
 
-By incorporating stations known as small cells - smaller, more portable base stations - we could bypass the issue of signals being lost through obstacles. In one case, when small cells were placed at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly (to be edited.....)
-between 0.06 and 0.08 decibels per kilometre in 28 and 38GHz bands, and 
+By incorporating stations known as small cells - much smaller and more portable than traditional base stations - we could bypass the issue of signals being lost through obstacles. In one case, when small cells were placed at 200m intervals, waves broadcast between 70-90GHz showed weakening of wave strength due to atmospheric conditions to be roughly 0.3 decibels per kilometre, while waves broadcast in 28 and 38GHz bands showed weakening between 0.6 and 0.8 dB per kilometre \cite{mmwave}. The same small cells tested in more severe conditions, such as particularly heavy rainfall, showed that the weakening of wave strength was still only between 3 and 6 decibels per kilometre. 
 
+While these results are promising for millimetre waves and small cells, indoor applications for 5G networks must also be accounted for. It is arguable that in reality the largest use of these new technologies won't happen outdoors, rather in indoor environments such as offices and schools, where signals will have to travel through walls. 
 
+Researchers at New York University's Polytechnic School of Engineering conducted tests in a typical modern office setting \cite{28_73ghz}, measuring 65.5 by 35 metres and complete with typical office features such as cubicles, desks and chairs, shelves, cabinets, concrete walls, glass doors, elevator doors. Inital tests carried out over distances ranging from 3.9 to 45.9 metres showed path loss exponents (PLE; \textit{a reduction in strength}) in line-of-sight circumstances to be 2.6 and 2.1 decibels for 28 and 73GHz bands, respectively. In non-line-of-sight situations, PLEs increased to 11.6 and 15.6 decibels for 28 and 73GHz bands, respectively. 
 
 
 \subsection{Massive MIMO: Multiple Input Multiple Output}
