Working on MIMO

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -89,3 +89,16 @@ Future Wireless Networks",
     year =         "2015",
     DOI =          "10.1109/ICCW.2015.7247348"
 }
+
+@article{mimo,
+% times cited: 220~
+% A. Lee Swindlehurst et al
+    author =       "A. L. Swindlehurst et al",
+    title =        "Millimeter-Wave Massive MIMO: The Next Wireless Revolution?",
+    journal =      "IEEE Communications Magazine",
+    volume =       "52",
+    number =       "9",
+    pages =        "56-62",
+    year =         "2014",
+    DOI =          "10.1109/MCOM.2014.6894453"
+}
