Finished MIMO for now, moving to beamforming

--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,10 @@ Researchers at New York University's Polytechnic School of Engineering conducted
 \subsection{Massive MIMO: Multiple Input Multiple Output}
 The concept of MIMO or \textit{multiple input, multiple output} has existed for many years, and is now a routine component in 4G LTE base stations. These antennae, usually no more than 10 per station \cite{mimo}, handle all incoming and outgoing data. The relatively small number of antennae featured in our current networks is a large contributing factor to current bandwidth issues, considering the antennae have to deal with an increased number of users at peak times.
 
-Massive MIMO is simply traditional MIMO but on a much larger scale, specifically a larger number of antennae than number of active users at any particular time \cite{whatwill5gbe}. 
+Massive MIMO is simply traditional MIMO but on a much larger scale, specifically a larger number of antennae than number of active users at any particular time \cite{whatwill5gbe}. As 5G stations would be handling millimetre waves instead of larger radio waves, a Massive MIMO system would have a much smaller form factor (the ratio of quadratic average to the average of all points on the waveform). This smaller form factor means antennae could be made physically smaller, allowing for more antennae on a station and thus indicating the possibility for exponential increases in available bandwidth \cite{mimo}.
+
+As Andrews \textit{et al} explains in \cite{whatwill5gbe}, the idea that number of antennae per station would be larger than the number of active users implies antenna numbers in the hundreds in each station. This suggestion brings a new implication with regards to signal interference from multiple antennae. One possible solution to this complication is the implementation of beamforming and signal processing algorithms.
+
 \subsection{Beamforming}\label{subsec:beamf}
 \subsection{Full Duplex}
 \subsection{Problems Facing 5G}
