--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,7 +80,7 @@ Future Wireless Networks",
     DOI =          "10.1109/JSAC.2014.2328111"
 }
 
-@misc{28_73ghz,
+@article{28_73ghz,
 % times cited: 50~
 % Sijia Deng et al
     author =       "S. Deng et al",
@@ -101,4 +101,17 @@ Future Wireless Networks",
     pages =        "56-62",
     year =         "2014",
     DOI =          "10.1109/MCOM.2014.6894453"
+}
+
+@article{beamf,
+% times cited: ~620
+% Naga Bhushan et al
+    author =       "N. Bhushan et al",
+    title =        "Network Densification: The Dominant Theme for Wireless Evolution into 5G",
+    journal =      "IEEE Communications Magazine",
+    volume =       "52",
+    number =       "2",
+    pages =        "82-89",
+    year =         "2014",
+    DOI =          "10.1109/MCOM.2014.6736747"
 }
