Finishing up beamforming/spatial multiplexing

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -103,6 +103,19 @@ Future Wireless Networks",
     DOI =          "10.1109/MCOM.2014.6894453"
 }
 
+@article{beam_sm,
+% times cited: ~220
+% Shu Sun et al
+    author =       "S. Sun et al",
+    title =        "MIMO for Millimeter-Wave Wireless Communications: Beamforming, Spatial Multiplexing, or Both?",
+    journal =      "IEEE Communications Magazine",
+    volume =       "52",
+    number =       "12",
+    pages =        "110 - 121",
+    year =         "2014",
+    DOI =          "10.1109/MCOM.2014.6979962"
+}
+
 @article{beamf,
 % times cited: ~620
 % Naga Bhushan et al
